fix situation with develop and main (#30)